Changelog
=========

1.0dev (unreleased)
-------------------

- added update_form in utils, that can be used in 
  the post_validate method of your Archetype objects. [vincent]

- Added transform to the portal_transform. [vincent]